--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ about:
       #href: resume.pdf
 ---
 
-I specialize in applied research at the intersection of **data science** and **human-centered automation**. I use a variety of experimental and analytical methods to help organizations leverage data science for real-world decision-making.
+I specialize in applied research at the intersection of **data science** and **human-centered automation**. I use a variety of experimental and analytical methods to help organizations leverage data science for decision-making.
 
 [See my work ⟶](work.qmd)
 
