--- a/blog.qmd
+++ b/blog.qmd
@@ -13,4 +13,4 @@ page-layout: full
 title-block-banner: false
 ---
 
-##### 
+This section of the website is currently under construction. As of January 23rd, the only available article is the one on user interaction with llms.
