--- a/workposts/1-hf-nuclear/index.qmd
+++ b/workposts/1-hf-nuclear/index.qmd
@@ -1,10 +1,11 @@
 ---
-title: "Human Performance in SMR Operations"
+title: "Human performance in operation of automated nuclear reactors"
 author: "Davide Gentile"
 date: "2024-09-24"
+description: "Post description"
 image: "SMRs.png"
 ---
 
-This research program collects human performance data during simulated operations of Small Modular Reactors (SMRs). SMRs allow for remote monitoring and control of multiple facilities, which introduces a new set of human factors challenges related to the impact of control room design on human performance. Ongoing human-subjects experiment are investigating several aspects of SMR design and their effects on operator behavior, decision-making, and interaction with automated technologies.
+This research program collects human performance data during simulated operations of Small Modular Reactors (SMRs). SMRs allow for remote monitoring and control of multiple facilities, which introduces a new set of human factors challenges related to the impact of control room design on human performance. Ongoing human-subjects experiments are investigating several aspects of SMR design and their effects on operator behavior, decision-making, and interaction with automated technologies.
 
 ![The basic principle iPWR simulator setup in the Halden Future Lab](SMRs.png)
