--- a/workposts/2-explanations-human-performance/index.qmd
+++ b/workposts/2-explanations-human-performance/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Feedback to Assist Human Decisions"
+title: "Human-AI collaboration in industrial process control"
 author: "Davide Gentile"
 date: "2024-09-16"
 image: "shap.png"
