--- a/workposts/1-hf-nuclear/index.qmd
+++ b/workposts/1-hf-nuclear/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Human performance in operation of automated nuclear reactors"
 author: "Davide Gentile"
+description: "This research program addresses emerging human factors challenges in the operation of small modular reactors (SMRs). The program focuses on two main objectives: i) improving methodologies for measuring situation awareness and workload in nuclear control rooms, and ii) developing a taxonomy to categorize various SMR designs and their implications for human performance. The first experiment evaluates multiple situation awareness and workload metrics across different levels of automation in computerized nuclear procedures. A parallel project within the program is creating a taxonomy that will guide the development of human factors guidelines across a range of SMR designs. These outcomes will help establish more effective performance metrics and inform the creation of standardized guidelines for SMR operations, contributing to improved safety and efficiency in the nuclear sector. This research is funded by the Natural Sciences and Engineering Council of Canada and the Canadian Nuclear Safety Commission."
 date: "2024-09-24"
-description: "Post description"
 image: "SMRs.png"
 ---
 
