--- a/about.qmd
+++ b/about.qmd
@@ -30,6 +30,6 @@ Hello,
 
 I am **Team Lead of Analysis and Experimentation** at the Cognitive Engineering Laboratory (University of Toronto), where I research human performance and automated decision assistance in small modular reactor control.
 
-I specialize in experimental design, statistics, machine learning, and UX research. My experience includes [academic research](publications.qmd), industrial R&D, and applied data science. My [PhD dissertation](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6) (2024) focused on human-AI collaboration in industrial process control, evaluating the impact of machine learning explanations on operator performance.
+I specialize in human-subjects experimentation, statistics, machine learning, and UX research. My experience includes [academic research](publications.qmd), applied data science, and industrial R&D. My [PhD dissertation](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6) (2024) focused on human-AI collaboration in industrial process control, specifically on evaluating the impact of machine learning explanations on operator performance. Alongside my research, I [trained](courses.qmd) 400+ engineering students in statistical programming and human-centered system design.
 
 I thrive in cross-functional teams, collaborating with engineers, designers, and business leaders to translate data into action. My goal is to make automation intuitive and effective for people through human-centered design, bridging technical and user needs.
