--- a/courses.qmd
+++ b/courses.qmd
@@ -1,17 +1,19 @@
 ---
 title: "Courses"
+subtitle: "List of courses I have contributed to at the University of Toronto"
 ---
 
--   Introduction to data science with R
+-   **Statistics (MIE237)**\
+    *Overview*: Introduction to statistics using R. Topics included: Data gathering motivation and methods (observational vs. experimental). Modeling for inference vs. prediction. Data visualizations. Two sample estimation and hypothesis testing. Choice of sample size. Fitting distributions to data. Goodness of fit tests. Simple linear regression and correlation. Multiple linear regression. Model building and model assessment. Design and analysis of single and multi-factor experiments. Analysis of variance. Fixed and random effects models. Multiple comparisons.\
+    *Years*: 2021, 2022, 2023
 
--   [Time series analysis with R](https://vlyubchich.github.io/tsar/)
+-   **Human-Centered System Design (MIE240)**\
+    *Overview*: Introduction to principles, methods, and tools for the analysis, design, and evaluation of human-centred systems. Consideration of impacts of human physical, physiological, perceptual, and cognitive factors on the design and use of engineered systems. Basic concepts of anthropometrics, work-related hazards, shiftwork, workload, human error and reliability, system complexity, and human factors standards. The human-centred systems design process, including task analysis, user requirements generation, prototyping, and usability evaluation. Design of work/rest schedules, procedures, displays and controls, and information and training systems; design for error prevention and human-computer interaction; design for accessibility and aging populations.\
+    *Years*: 2022, 2023, 2024
 
--   Statistical models for empirical research
-
--   Design of experiments
-
--   Data visualization and communication
-
--   Programming practices in human-subjects research
-
--   How to publish scientific research
+```{=html}
+<!-- -->
+```
+-   **Case Studies in Human Factors and Ergonomics (MIE345)**\
+    *Overview*: A comprehensive analysis of case studies where human factors methods have been applied to enhance human-machine system performance. The examples span both fundamental ergonomics and high-tech applications. Emphasis placed on the practical application of concepts and techniques covered in previous human factors courses.\
+    *Years*: 2024
