--- a/workposts/2-explanations-human-performance/index.qmd
+++ b/workposts/2-explanations-human-performance/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Human-AI collaboration in industrial process control"
 author: "Davide Gentile"
+description: "This project investigated the impact of model-agnostic explanations on human performance in industrial process control, focusing on improving the detection of system failures in condition-based maintenance. Two controlled experiments tested the effects of different explanation types—normative, contrastive, and counterfactual—on decision-making, workload, and reliance on automated decision aids. Results showed that combining normative and contrastive explanations improved decision time and reduced workload, while adding counterfactuals further enhanced accuracy and reduced false alarms. The findings can inform the design of more effective and efficient explainable AI systems to support human operators in safety-critical work environments."
 date: "2024-09-16"
 image: "shap.png"
 ---
