--- a/workposts/3-ericsson-project/index.qmd
+++ b/workposts/3-ericsson-project/index.qmd
@@ -1,7 +1,8 @@
 ---
 title: "UX analysis of explainable machine learning tools for Ericsson's data scientists"
 author: "Davide Gentile"
-date: "2024-08-12"
+description: "This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator. "
+date: "2024-06-12"
 #categories: [news]
 ---
 
