--- a/publications.qmd
+++ b/publications.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Research"
-subtitle: "A list of peer-reviewed articles and presentations in human factors and human-AI collaboration."
+subtitle: "List of peer-reviewed articles and presentations in human factors and human-AI collaboration"
 title-block-banner: true
 ---
 
