--- a/index.qmd
+++ b/index.qmd
@@ -12,6 +12,6 @@ about:
 
 I specialize in applied research at the intersection of **data science** and **human-centered automation**. I use a variety of experimental and analytical methods to help organizations leverage data science for decision-making.
 
-[View My Portfolio ⟶](work.qmd)
+[View My Portfolio ⟶](projects.qmd)
 
 *Image: The Gran Sasso mountain range seen from the sea between Roseto degli Abruzzi and Giulianova (photo by Ivan Melarangelo).*
