--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -3,9 +3,8 @@ title: "UX analysis of explainable machine learning tools for Ericsson's data sc
 author: "Davide Gentile"
 description: "This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator. "
 date: "2024-06-12"
-#categories: [news]
+image: "picture1.png"
+categories: [Explainable AI, interpretability, data science UX]
 ---
 
 During my internship at Ericsson, we developed and evaluated a glyph-based polar chart (GPC) designed to support a comprehensive interpretation of the results of ML models. The GPC enabled data scientists to compare different explanation methods within the same model and across models.
-
-![](/images/polar.png)
