--- a/portfolio/hf-nuclear/index.qmd
+++ b/portfolio/hf-nuclear/index.qmd
@@ -1,11 +1,13 @@
 ---
-title: "Human performance in operation of automated nuclear reactors"
+title: "Human Factors in Small Modular Reactor Operations"
 author: "Davide Gentile"
-description: "This project addresses emerging human factors challenges in small modular reactor (SMR) operations, focusing on two key objectives: improving methodologies for assessing situation awareness (SA) and workload in nuclear control rooms, and developing a taxonomy to categorize SMR designs and their impact on human performance. The first experiment tests multiple (SA) and workload measures across different automation levels. A parallel project is creating a taxonomy to guide human factors guidelines for varying SMR designs. The project aims to establish better performance metrics and standardized operational guidelines, supporting safety and efficiency in the nuclear sector."
+description: "Focused on improving safety and efficiency in nuclear control rooms by assessing situation awareness and workload in SMR operations. The project includes developing a taxonomy to standardize operational guidelines and performance metrics, supporting the design of more effective human factors practices for emerging nuclear technologies."
 date: "2024-12-09"
 image: "SMRs.png"
 categories: [human performance, nuclear operations]
 ---
+
+This project addresses emerging human factors challenges in small modular reactor (SMR) operations, focusing on two key objectives: improving methodologies for assessing situation awareness (SA) and workload in nuclear control rooms, and developing a taxonomy to categorize SMR designs and their impact on human performance. The first experiment tests multiple (SA) and workload measures across different automation levels. A parallel project is creating a taxonomy to guide human factors guidelines for varying SMR designs. The project aims to establish better performance metrics and standardized operational guidelines, supporting safety and efficiency in the nuclear sector.
 
 ### Context
 
