--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -1,10 +1,12 @@
 ---
-title: "UX analysis of explainable machine learning tools for Ericsson's data scientists"
+title: "Machine Learning Model Interpretability Tool"
 author: "Davide Gentile"
-description: "This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator. "
+description: "During my internship at Ericsson’s Global AI Accelerator, my team developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models, enabling easier comparison of model explanations and identification of key variables. Tested with Ericsson's data scientists, the tool helped streamline logical reviews of model outputs."
 date: "2024-06-12"
 image: "picture2.png"
-categories: [Explainable AI, telecom, data science UX]
+categories: [UX, data science]
 ---
+
+This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator.
 
 During my internship at Ericsson, we developed and evaluated a glyph-based polar chart (GPC) designed to support a comprehensive interpretation of the results of ML models. The GPC enabled data scientists to compare different explanation methods within the same model and across models.
